--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,12 @@
             "email": "neoan@neoan.us"
         }
     ],
+    "autoload": {
+        "psr-4": {
+          "Neoan3\\Apps\\": "./"
+        }
+
+      },
     "require-dev": {
         "phpunit/phpunit": "^8.3"
     }
